Fix { spacing. Change heading-container margin from 5px to 50px. Change screen-sub-heading margin from 18px to 10px.

--- a/frontend/src/utilities/ScreenHeading/ScreenHeading.css
+++ b/frontend/src/utilities/ScreenHeading/ScreenHeading.css
@@ -1,25 +1,25 @@
-.heading-container{
+.heading-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-  margin: 0 0 5px 0;
+  margin: 0 0 50px 0;
 }
 
-.screen-sub-heading{
+.screen-sub-heading {
   letter-spacing: 3px;
-  margin: 8px 0 18px 0;
+  margin: 8px 0 10px 0;
   font-size: 12px;
   color: var(--black);
 }
 
-.screen-heading{
+.screen-heading {
   font-size: 32px;
   color: #1f2235;
   font-family: "Poppins Bold";
 }
 
-.heading-separator{
+.heading-separator {
   display: flex;
   align-items: center;
   position: relative;
@@ -27,13 +27,13 @@
   margin: 10px 0 0 0;
 }
 
-.separator-line{
+.separator-line {
   width: 100%;
   height: 2px;
   background-color: #1f2235;
 }
 
-.separator-blob{
+.separator-blob {
   height: 10px;
   width: 100%;
   position: absolute;
@@ -41,7 +41,7 @@
   justify-content: center;
 }
 
-.separator-blob div{
+.separator-blob div {
   width: 35px;
   border-radius: 10px;
   background-color: var(--dark-orange);
